force-app/src/objects/ffirule__IntegrationRuleJob__c.object
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulejob</customHelpPage>
    <fields>
        <fullName>ffirule__IntegrationRule__c</fullName>
        <label>ClickLink Rule</label>
        <referenceTo>ffirule__IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Jobs</relationshipLabel>
        <relationshipName>IntegrationRuleJobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffirule__ListViewName__c</fullName>
        <label>List View Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ListViewObject__c</fullName>
        <label>List Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ListViewSourceIDField__c</fullName>
        <label>List Object Source ID Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ScheduledApexJobCronExpression__c</fullName>
        <label>Scheduled Apex Job Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffirule__ScheduledApexJobID__c</fullName>
        <label>Scheduled Apex Job ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>ClickLink Job</label>
    <listViews>
        <fullName>ffirule__All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ffirule__ScheduledApexJobID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>